--- a/data/en/sections/experiences.yaml
+++ b/data/en/sections/experiences.yaml
@@ -11,7 +11,7 @@ section:
 # Your experiences
 experiences:
 - company:
-    name: Example Co.
+    name: Petoons Studio
     url: "https://www.example.com"
     location: Dhaka Branch
     logo: /images/sections/experiences/company1.jpg
