--- a/config.yaml
+++ b/config.yaml
@@ -23,10 +23,7 @@ languages:
   en:
     languageName: English
     weight: 1
-  # bn:
-  #   languageName: বাংলা
-  #   weight: 3
-
+    
 # Force a locale to be use, really useful to develop the application ! Should be commented in production, the "weight" should rocks.
 # DefaultContentLanguage: bn
 
@@ -54,14 +51,14 @@ enableEmoji: false
 # Site parameters
 params:
   # Background image of the landing page
-  background: /images/site/background.jpg
+  background: /images/site/background.png
 
   # Provide logos for your site. The inverted logo will be used in the initial
   # transparent navbar and the main logo will be used in the non-transparent navbar.
   logo:
-    main: /images/site/main-logo.png
-    inverted: /images/site/inverted-logo.png
-    favicon: /images/site/favicon.png
+    # main: /images/site/main-logo.png
+    # inverted: /images/site/inverted-logo.png
+    # favicon: /images/site/favicon.png
 
   # GitHub repo of your site
   gitRepo: https://github.com/MarcBaques/hugo-toha.github.io
@@ -287,4 +284,4 @@ params:
 
     # Show/hide disclaimer notice in the footer. Default is "false".
     disclaimer:
-      enable: true
+      enable: false
