--- a/data/en/site.yaml
+++ b/data/en/site.yaml
@@ -1,5 +1,5 @@
 # Copyright Notice
-copyright: © 2020 Copyright.
+copyright: © 2024 Copyright.
 
 # A disclaimer notice for the footer. Make sure you have set "params.footer.disclaimer.enable: true" in your `config.yaml` file.
 disclaimer: "This theme is under MIT license. So, you can use it for non-commercial, commercial, or private uses.
@@ -25,7 +25,7 @@ openGraph:
   title: Marc Baqués Sàbat
   type: website
   description: Portfolio and personal blog of Marc Baqués Sàbat.
-  image: images/author/john.png
+  image: images/author/me.jpg
   url: https://marcbaquessabat.es
 
 # specify the title appearing on the navbar.
