--- a/data/en/sections/experiences.yaml
+++ b/data/en/sections/experiences.yaml
@@ -14,43 +14,43 @@ experiences:
     name: Petoons Studio
     url: "https://www.petoons.com/"
     location: Barcelona
-    logo: /images/sections/experiences/company1.jpg
+    logo: /images/sections/experiences/petoons.jpg
     # Can optionally show a different logo for dark theme
     # darklogo: /images/sections/experiences/company1.jpg
     # company overview
     overview: Petoons Studio is a transmedia project incubator, founded in 2016 by Sergio García and Daniel del Amor. The team is formed by different artists, animators, programmers and experts in children and family entertainment. They are pioneers in the new Art of 'Storyplaying', merging video games, animation series and education.
   positions:
   - designation: Unity Porting Manager
-    start: Nov 2019
-    # don't provide end date if you are currently working there. It will be replaced by "Present"
-    end: May 2024
-    # give some points about what was your responsibilities at the company.
+    start: Nov 2022
+    end: Apr 2024
     responsibilities:
-    - Design and develop XYZ tool for ABC task
-    - Design, develop and manage disaster recovery tool [Xtool](https://www.example.com) that backup Kubernetes volumes, databases, and cluster's resource definition.
-    - Lead backend team.
+    - Manage a small Porting team, assigning and planning milestones, sprints and tasks
+    - Debug and profile games to identify future and actual problems or bottlenecks
+    - Develop internal tools for programming department to automatize builds or common tasks with Jenkins
+    - Advice and teach other teams about porting process about how to plan and proceed with new projects
+    - Suggest new proces and methodologies to reach desired goals in tight deadlines
 
   - designation: Junior Game Developer
-    start: Nov 2017
-    end: Oct 2019
+    start: Aug 2021
+    end: Nov 2022
     responsibilities:
-    - Implement and test xyz feature for abc tool.
-    - Support client for abc tool.
-    - Learn k,d,w technology for xyz.
+    - Port games to different platforms by implementing different systems for Switch, PS4, PS5, Xbox One, Xbox Series, Steam, Epic, GOG, Stadia
+    - Document consoles features for future reference
+    - Program gameplay features taking in account all systems
 
 - company:
     name: Digital Legends Entertainment
-    url: "https://www.example.com"
-    location: Nowhere
-    logo: /images/sections/experiences/company2.jpg
+    url: "https://www.digital-legends.com/"
+    location: Barcelona
+    logo: /images/sections/experiences/digitallegends.jpg
     # Can optionally show a different logo for dark theme
     # darklogo: /images/sections/experiences/company2.jpg
-    overview: PreExample Co. is a gateway company to enter into Example co. So, nothing special here.
+    overview: Digital Legends Entertainment has worked many years for big Industry players such as Electronic Arts, Disney and Adidas either developing flagship titles or their key IP’s. One of the many things that makes this studio unique is their proprietary game engine, Karisma, which is one of the most powerful in the market.
   positions:
   - designation: Software Engineer
-    start: March 2016
-    end: May 2017
+    start: Nov 2016
+    end: Mar 2017
     responsibilities:
-    - Write lots of example codes.
-    - Read lots of examples.
-    - See lots of example videos.
+    - Find inconsistencies, glitches or bugs on mobile devices
+    - Documenting, reporting and reviewing errors
+    - Live ops, daily checking
