Base web fixes of education and some icons

--- a/config.yaml
+++ b/config.yaml
@@ -86,7 +86,7 @@ params:
       showAuthor: true # shows the author of post (defaults true)
       # Share post on different social media
       shareButtons:
-        facebook: true
+        # facebook: true
         twitter: true
         linkedin: true
         # reddit: true
